<package>
  <name>rbn100_msgs</name>
  <version>0.7.0</version>
  <description>
    <p>
      rbn100 message and service types: custom messages and services for rbn100 packages.
    </p> 
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/kobuki_msgs</url>
  <url type="repository">https://github.com/yujinrobot/kobuki_msgs</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki_msgs/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
